# ost-compiler

./: .gitignore  Builder.cpp  CMakeLists.txt  Compiler.cpp  Debugger.cpp  K3.ost  K3.tu4  Makefile  README.md  Tests.cpp  Tu4Run.cpp  compile_commands.json  healthcheck.py  main.cpp  out.txt  run.sh  tags  testProgram.ost  testProgram2.ost
include/: AST.hpp  Bimap.hpp  BreakPointer.hpp  BreakpointManager.hpp  CharStream.hpp  Combinator.hpp  Compiler.hpp  Cursor.hpp  DIContainer.hpp  FilePosition.hpp  Lexem.hpp  LexemAnalizer.hpp  Line.hpp  Token.hpp  Tokenizer.hpp  Tu4Command.hpp  Tu4Runner.hpp  astTree.hpp  event.hpp  exception.hpp  globals.hpp  keywords.hpp  lexemType.hpp  operators.hpp  trie.hpp  tupleUtils.hpp  utils.hpp
include/combinators/: AnyOf.hpp  Combinator.hpp  Combining.hpp  Lambda.hpp  Result.hpp  Space.hpp  String.hpp  utils.hpp
include/parsers/: main.hpp
src/: AST.cpp  BreakPointer.cpp  CharStream.cpp  Combinator.cpp  CommandsSerializer.cpp  Compiler.cpp  Cursor.cpp  FilePosition.cpp  LexemAnalyzer.cpp  LexemParser.cpp  Token.cpp  Tokenizer.cpp  Tu4Runner.cpp  keywords.cpp  operators.cpp  utils.cpp
src/combinators/: AnyOf.cpp  String.cpp
tests/: main.cpp  parser.cpp
tests/combinators/: Space.cpp  String.cpp  cmbGrouping.cpp  optionalParser.cpp
tests/ost/in/: 1.ost
tests/ost/programs/: 1.ost  2.ost  3.ost  4.ost  5.ost
tests/ost/tests/: 1.txt  2.txt  3.txt  4.txt  5.txt
